<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/rule"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/walkText"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/walkTime"
        android:layout_alignBottom="@+id/walkTime"
        android:layout_toRightOf="@+id/walkTime"
        android:text="@string/walkSteps"
        android:textSize="30sp" />

    <Button
        android:id="@+id/walkEnd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:text="@string/end" />

    <TextView
        android:id="@+id/walkTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/zero"
        android:textColor="#00FF00"
        android:textSize="80sp" />

    <Button
        android:id="@+id/walkBegin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/walkTime"
        android:layout_marginBottom="29dp"
        android:layout_marginLeft="18dp"
        android:text="@string/begin" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/walkBegin"
        android:layout_alignBottom="@+id/walkBegin"
        android:layout_toRightOf="@+id/walkBegin"
        android:text="@string/squatStateText"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/walkState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_toRightOf="@+id/textView2"
        android:text="@string/stand"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView2"
        android:layout_below="@+id/walkTime"
        android:layout_marginRight="20dp"
        android:layout_marginTop="47dp"
        android:text="@string/heatConsumption"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/heatConsumption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView3"
        android:layout_toRightOf="@+id/textView3"
        android:text="@string/zero"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/heatConsumption"
        android:layout_toRightOf="@+id/heatConsumption"
        android:text="@string/qianka"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>